--- a/PersonalWebsite2/HTML/index.html
+++ b/PersonalWebsite2/HTML/index.html
@@ -311,7 +311,7 @@
 					<div class="grid-item document-design">
 						<img src="img/demoImg/guessRGBHard.png" alt="RGB Gussing Game">
 						<a class="portfolio-open-modal" href="#"><span class="lnr lnr-magnifier"></span></a>
-						<a class="portfolio-external-link" href="../Demo/ColorGame/ColorGame.html" target="_blank"><span class="lnr lnr-link"></span></a>
+						<a class="portfolio-external-link" href="Demo/ColorGame/ColorGame.html" target="_blank"><span class="lnr lnr-link"></span></a>
 						<div class="portfolio-hidden">
 							<ul class="image-list">
 								<li><img src="img/blank.png" data-src="img/demoImg/guessRGBHard.png" alt="Hard Mode"></li>
@@ -331,7 +331,7 @@
 									<p>VanillaJS, HTML, CSS</p>
 								</li>
 								<li>
-									<a href ="../Demo/ColorGame/ColorGame.html" class="btn" target="_blank">Start Game</a>
+									<a href ="Demo/ColorGame/ColorGame.html" class="btn" target="_blank">Start Game</a>
 								</li>
 							</ul>
 						</div>
@@ -339,7 +339,7 @@
 					<div class="grid-item document-design">
 						<img src="img/demoImg/pataTap.jpg" alt="Patatap Clone">
 						<a class="portfolio-open-modal" href="img/demoImg/pataTap.jpg"><span class="lnr lnr-magnifier"></span></a>
-						<a class="portfolio-external-link" href="../Demo/patatapClone/circles.html" target="_blank"><span class="lnr lnr-link"></span></a>
+						<a class="portfolio-external-link" href="Demo/patatapClone/circles.html" target="_blank"><span class="lnr lnr-link"></span></a>
 						<div class="portfolio-hidden">
 							<ul class="image-list">
 								<li><img src="img/blank.png" data-src="img/demoImg/pataTap.jpg" alt="Hard Mode"></li>
@@ -358,7 +358,7 @@
 									<p>VanillaJS, HTML, CSS</p>
 								</li>
 								<li>
-									<a href ="../Demo/patatapClone/circles.html" class="btn" target="_blank">Start Game</a>
+									<a href ="Demo/patatapClone/circles.html" class="btn" target="_blank">Start Game</a>
 								</li>
 							</ul>
 						</div>
@@ -366,7 +366,7 @@
 					<div class="grid-item document-design">
 						<img src="img/demoImg/dogBreed.png" alt="">
 						<a class="portfolio-open-modal" href=""><span class="lnr lnr-magnifier"></span></a>
-						<a class="portfolio-external-link" href="../Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" target="_blank"><span class="lnr lnr-link"></span></a>
+						<a class="portfolio-external-link" href="Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" target="_blank"><span class="lnr lnr-link"></span></a>
 						<div class="portfolio-hidden">
 							<ul class="image-list">
 								<li><img src="img/blank.png" data-src="img/demoImg/dogBreed.png" alt="Hard Mode"></li>
@@ -386,7 +386,7 @@
 									<p>Visual design, user research</p>
 								</li>
 								<li>
-									<a href="../Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" class="btn" target="_blank">Visit Website</a>
+									<a href="Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" class="btn" target="_blank">Visit Website</a>
 								</li>
 							</ul>
 						</div>
