--- a/PersonalWebsite2/HTML/index.html
+++ b/PersonalWebsite2/HTML/index.html
@@ -105,7 +105,7 @@
 						</li>
 					</ul>
 					<div class="intro">
-						<p>A full stack engineer driven by curiosity, a front end engineer dying for beauty, an UI/UX engineer targeting at efficiency -- I'm web engineer Li, who design and build, only good stuffs.</p>
+						<p>I've always been drawn to the overlap between design and development. I care for beauty as well as efficiency. My skills are broad: from UI/UX, front end to back end development. I enjoy each aspect, and love building web & mobile apps from start to finish</p>
 					</div>
 				</div>
 			</section>
@@ -587,8 +587,8 @@
 							<!--</ul>-->
 						<!--</div>-->
 					<!--</div>-->
-				</div>
-			</section>
+				<!--</div>-->
+			<!--</section>-->
 
 			<!--<section id="testimonials" class="section-testimonials">-->
 				<!--<div class="owl-carousel owl-theme">-->
@@ -744,8 +744,8 @@
 						<!--<li>Support & assistance</li>-->
 						<!--<li><a href="#" class="btn btn-outline btn-sm">Purchase</a></li>-->
 					<!--</ul>-->
-				<!--</div>-->
-			<!--</section>-->
+				</div>
+			</section>
 
 			<section id="contact" class="section-contact bgDarkGray flex-responsive">
 				<div class="left">
@@ -820,7 +820,7 @@
 			<script src="js/vendor/jquery.lettering.js"></script>
 			<script src="js/vendor/jquery.textillate.js"></script>
 			<script src="js/vendor/owl.carousel.2.1.0/owl.carousel.min.js"></script>
-			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDqgIr-kCHTT3pUT8nPbqOB4m_RRNX2BCA" type="text/javascript"></script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDorx7D540DjpjCiy_V9Cx-XEjpy4FImwI" type="text/javascript"></script>
 			<script src="js/google-maps.js"></script>
 			<script src="js/contact.js"></script>
 			<script src="js/main.js"></script>
