--- a/PersonalWebsite2/HTML/index.html
+++ b/PersonalWebsite2/HTML/index.html
@@ -363,6 +363,34 @@
 							</ul>
 						</div>
 					</div>
+					<div class="grid-item document-design">
+						<img src="img/demoImg/dogBreed.png" alt="">
+						<a class="portfolio-open-modal" href=""><span class="lnr lnr-magnifier"></span></a>
+						<a class="portfolio-external-link" href="Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" target="_blank"><span class="lnr lnr-link"></span></a>
+						<div class="portfolio-hidden">
+							<ul class="image-list">
+								<li><img src="img/blank.png" data-src="img/demoImg/dogBreed.png" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/demoImg/dogBreed2.png" alt=""></li>
+							</ul>
+							<ul class="portfolio-info">
+								<li>
+									<h3>Project</h3>
+									<p>Dog Breed Show Case</p>
+								</li>
+								<li>
+									<h3>Description</h3>
+									<p>A very simple dog breed show case that tells a bit about the characteristic, and history of the breed, also, if it's right for you, enjoy :)</p>
+								</li>
+								<li>
+									<h3>Skills</h3>
+									<p>Ajax, Fetch, JavaScript, HTML5, CSS3</p>
+								</li>
+								<li>
+									<a href="Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" class="btn" target="_blank">Visit Website</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 					<div class="grid-item document-design web-design" id="mutual-fund-grid">
 						<img src="img/demoImg/mutualFund1.png" alt="Carnegie Financial Services">
 						<a class="portfolio-open-modal" href="https://goo.gl/7kkq2W"><span class="lnr lnr-magnifier"></span></a>
@@ -393,61 +421,62 @@
 							</ul>
 						</div>
 					</div>
-					<div class="grid-item document-design">
-						<img src="img/demoImg/dogBreed.png" alt="">
+					<div class="grid-item document-design photography">
+						<img src="img/demoImg/mobileAppCover.png" alt="">
 						<a class="portfolio-open-modal" href=""><span class="lnr lnr-magnifier"></span></a>
-						<a class="portfolio-external-link" href="Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" target="_blank"><span class="lnr lnr-link"></span></a>
+						<a class="portfolio-external-link" href="https://drive.google.com/file/d/0B3IjKMvp0JsXd2liNlpaQU9tRDA/view?usp=sharing" target="_blank"><span class="lnr lnr-link"></span></a>
 						<div class="portfolio-hidden">
 							<ul class="image-list">
-								<li><img src="img/blank.png" data-src="img/demoImg/dogBreed.png" alt="Hard Mode"></li>
-								<li><img src="img/blank.png" data-src="img/demoImg/dogBreed2.png" alt="Hard Mode"></li>
+								<li><img src="img/blank.png" data-src="img/demoImg/mobileApp1.jpg" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/demoImg/mobileApp2.jpg" alt=""></li>
+								<li><img src="img/blank.png" data-src="img/demoImg/mobileApp3.jpg" alt=""></li>
 							</ul>
 							<ul class="portfolio-info">
 								<li>
 									<h3>Project</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+									<p>Warehouse Mobile App UI/UX Design</p>
 								</li>
 								<li>
-									<h3>Client</h3>
-									<p>ABC Company</p>
+									<h3>Description</h3>
+									<p>Warehouse Mobile App UI/UX Design for Returnly Technologies, Inc</p>
 								</li>
 								<li>
 									<h3>Skills</h3>
-									<p>Visual design, user research</p>
+									<p>Requirement Elicitation, Survey Design, Interviewing, Prototyping, Documentation</p>
 								</li>
 								<li>
-									<a href="Demo/Demo_Ajax&Fetch_Api/DogBreeds.html" class="btn" target="_blank">Visit Website</a>
+									<a href="https://drive.google.com/file/d/0B3IjKMvp0JsXd2liNlpaQU9tRDA/view?usp=sharing" class="btn" target="_blank">Design Documentation</a>
 								</li>
 							</ul>
 						</div>
 					</div>
-					<!--<div class="grid-item interaction-design">-->
-						<!--<img src="img/placeholders/s3.png" alt="">-->
-						<!--<a class="portfolio-open-modal" href="#"><span class="lnr lnr-magnifier"></span></a>-->
-						<!--<a class="portfolio-external-link" href="http://www.google.com" target="_blank"><span class="lnr lnr-link"></span></a>-->
-						<!--<div class="portfolio-hidden">-->
-							<!--<ul class="video">-->
-								<!--<li><iframe width="560" height="315" data-src="http://www.youtube.com/embed/j7xiyPEWkrg?rel=0&showinfo=0&autohide=1&modestbranding=1" allowfullscreen></iframe></li>-->
-							<!--</ul>-->
-							<!--<ul class="portfolio-info">-->
-								<!--<li>-->
-									<!--<h3>Project</h3>-->
-									<!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>-->
-								<!--</li>-->
-								<!--<li>-->
-									<!--<h3>Client</h3>-->
-									<!--<p>ABC Company</p>-->
-								<!--</li>-->
-								<!--<li>-->
-									<!--<h3>Skills</h3>-->
-									<!--<p>Visual design, user research</p>-->
-								<!--</li>-->
-								<!--<li>-->
-									<!--<a href="http://www.google.com" class="btn" target="_blank">Visit Website</a>-->
-								<!--</li>-->
-							<!--</ul>-->
-						<!--</div>-->
-					<!--</div>-->
+					<div class="grid-item document-design web-design photography interaction-design">
+						<img src="img/demoImg/returnlySys1.png" alt="">
+						<a class="portfolio-open-modal" href="#"><span class="lnr lnr-magnifier"></span></a>
+						<a class="portfolio-external-link" href="https://drive.google.com/file/d/0B3IjKMvp0JsXYU9rMHFhREx1R28/view?usp=sharing" target="_blank"><span class="lnr lnr-link"></span></a>
+						<div class="portfolio-hidden">
+							<ul class="video">
+								<li><iframe width="560" height="315" data-src="Demo/Returnly-mobile-app-demo.mp4" allowfullscreen ></iframe></li>
+							</ul>
+							<ul class="portfolio-info">
+								<li>
+									<h3>Project</h3>
+									<p>Returnly System: Turn Online Returns into Revenue</p>
+								</li>
+								<li>
+									<h3>Client</h3>
+									<p>Returnly Technologies, Inc, California</p>
+								</li>
+								<li>
+									<h3>Skills</h3>
+									<p>UI/UX research and design, Hybrid mobile design & development, Api design & development, System Integration, Node.js, jQuery Mobile, MySQL</p>
+								</li>
+								<li>
+									<a href="https://drive.google.com/file/d/0B3IjKMvp0JsXVXliYVo2Z05oZW8/view?usp=sharing" class="btn" target="_blank">More Detials</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 					<!--<div class="grid-item photography">-->
 						<!--<img src="img/placeholders/s4.png" alt="">-->
 						<!--<a class="portfolio-open-modal" href="#"><span class="lnr lnr-magnifier"></span></a>-->
@@ -587,8 +616,8 @@
 							<!--</ul>-->
 						<!--</div>-->
 					<!--</div>-->
-				<!--</div>-->
-			<!--</section>-->
+				</div>
+			</section>
 
 			<!--<section id="testimonials" class="section-testimonials">-->
 				<!--<div class="owl-carousel owl-theme">-->
@@ -744,8 +773,9 @@
 						<!--<li>Support & assistance</li>-->
 						<!--<li><a href="#" class="btn btn-outline btn-sm">Purchase</a></li>-->
 					<!--</ul>-->
-				</div>
-			</section>
+				<!--</div>-->
+			<!--</section>-->
+
 
 			<section id="contact" class="section-contact bgDarkGray flex-responsive">
 				<div class="left">
