--- a/PersonalWebsite2/HTML/index.html
+++ b/PersonalWebsite2/HTML/index.html
@@ -36,7 +36,7 @@
 			<section id="hero" class="section-hero">
 				<div class="hero-slides owl-carousel owl-theme">
 					<div class="slide"><img class="img-as-bg" src="img/SF-building.JPG" alt=""></div>
-					<div class="slide"><img class="img-as-bg" src="img/workspace.jpg" alt=""></div>
+					<div class="slide"><img class="img-as-bg" src="img/coffee.jpg" alt=""></div>
 					<div class="slide"><img class="img-as-bg" src="img/profile1.jpeg" alt=""></div>
 				</div>
 				<svg class="hero-triangles" viewBox="0 0 263.07 394.61" preserveAspectRatio="xMinYMax meet">
@@ -200,7 +200,7 @@
 						<div class="animation-chain overflow-hidden" data-animation='fadeInLeft'>
 							<h3>Université Lumière Lyon 2</h3>
 							<h4>French Language and Literature</h4>
-							<h4>Lyon, Paris</h4>
+							<h4>Lyon, France</h4>
 							<div class="date">Sept 2013 - Jun 2014</div>
 						</div>
 					</li>
